--- a/MovieStoreC/MovieStoreC.BL/MovieStoreC.BL.csproj
+++ b/MovieStoreC/MovieStoreC.BL/MovieStoreC.BL.csproj
@@ -16,6 +16,7 @@
 
 	<ItemGroup>
 		<InternalsVisibleTo Include="MovieStoreC.Tests" />
+		<InternalsVisibleTo Include="DynamicProxyGenAssembly2" />
 	</ItemGroup>
 
 </Project>
